--- a/index.html
+++ b/index.html
@@ -3,16 +3,116 @@
   <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#02132d" />
-    <link rel="icon" href="/images/logo-min.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Primary Meta Tags -->
+    <title>Antonio Guzmán | Senior Fullstack Developer & AI/ML Engineer</title>
+    <meta name="title" content="Antonio Guzmán | Senior Fullstack Developer & AI/ML Engineer" />
+    <meta name="description" content="Senior Fullstack Developer con 5+ años de experiencia en React, Next.js, Node.js y NestJS. Especializado en aplicaciones web escalables, arquitectura de microfrontends e integración de IA/ML. Disponible para trabajo remoto." />
+    <meta name="keywords" content="Antonio Guzmán, Fullstack Developer, React Developer, Next.js, Node.js, NestJS, TypeScript, JavaScript, AI Engineer, ML Engineer, México, Remote Developer, Frontend Developer, Backend Developer, Web Developer" />
+    <meta name="author" content="Antonio Guzmán Vilchis" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Spanish" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#02132d" />
+    <meta name="msapplication-TileColor" content="#02132d" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://antonioguzman.dev/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://antonioguzman.dev/" />
+    <meta property="og:title" content="Antonio Guzmán | Senior Fullstack Developer & AI/ML Engineer" />
+    <meta property="og:description" content="Senior Fullstack Developer con 5+ años de experiencia en React, Next.js, Node.js y NestJS. Especializado en aplicaciones web escalables e integración de IA/ML." />
+    <meta property="og:image" content="https://antonioguzman.dev/images/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="es_MX" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="Antonio Guzmán - Portfolio" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://antonioguzman.dev/" />
+    <meta name="twitter:title" content="Antonio Guzmán | Senior Fullstack Developer & AI/ML Engineer" />
+    <meta name="twitter:description" content="Senior Fullstack Developer con 5+ años de experiencia en React, Next.js, Node.js y NestJS. Especializado en aplicaciones web escalables e integración de IA/ML." />
+    <meta name="twitter:image" content="https://antonioguzman.dev/images/og-image.png" />
+    <meta name="twitter:creator" content="@strcoder" />
+
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-min.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/logo-min.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/logo-min.png" />
+
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Antonio Guzman</title>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Antonio Guzmán Vilchis",
+      "alternateName": "strcoder",
+      "url": "https://antonioguzman.dev",
+      "image": "https://antonioguzman.dev/images/logo-min.png",
+      "jobTitle": "Senior Fullstack Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance / Remote"
+      },
+      "sameAs": [
+        "https://github.com/strcoder",
+        "https://linkedin.com/in/strcoder",
+        "https://twitter.com/strcoder"
+      ],
+      "knowsAbout": [
+        "JavaScript",
+        "TypeScript",
+        "React",
+        "Next.js",
+        "Node.js",
+        "NestJS",
+        "MongoDB",
+        "AI/ML Integration",
+        "Microfrontends",
+        "Web Development"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Mexico City",
+        "addressCountry": "MX"
+      },
+      "email": "aguzmanv09@gmail.com"
+    }
+    </script>
+
+    <!-- Website Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Antonio Guzmán - Portfolio",
+      "url": "https://antonioguzman.dev",
+      "description": "Portfolio profesional de Antonio Guzmán, Senior Fullstack Developer especializado en React, Next.js, Node.js y AI/ML.",
+      "author": {
+        "@type": "Person",
+        "name": "Antonio Guzmán Vilchis"
+      },
+      "inLanguage": ["es", "en"]
+    }
+    </script>
   </head>
   <body class="light">
+    <noscript>
+      <p>Este sitio requiere JavaScript para funcionar correctamente. Por favor, habilita JavaScript en tu navegador.</p>
+    </noscript>
     <div id="app"></div>
     <div id="modal"></div>
     <script type="module" src="/src/frontend/index.tsx"></script>
